# modal-ai-companion

./: .gitignore  .replit  README.md  pyproject.toml
src/: app.py  gcp_constants.py
src/agent/: modal_agent.py
src/handlers/: agent_config_handler.py  chat_handler.py  image_handler.py  index_handler.py  llm_handler.py  voice_handler.py
src/models/: .llm_api.py.3619933586~  schemas.py
src/services/: cache_service.py  file_service.py
test/: agent_init_test.py  character_loader.py  client.py  concurrency_client.py
test/characters/: luna.yaml
